--- a/src/pages/homepage/homepage.scss
+++ b/src/pages/homepage/homepage.scss
@@ -7,16 +7,92 @@
   background-size: 80% 90%;
   background-position: top center;
   position: relative;
+  display: flex;
+  justify-content: center;
+
+  & > svg {
+    position: absolute;
+    padding: 16px;
+    background: #CB8346;
+    color: #fff;
+    top: 45%;
+    transform: translateY(-40%);
+    cursor: pointer;
+    transition: 0.3s;
+
+    &:hover {
+      background: #df8d46;
+      box-shadow: rgba(201, 111, 1, 0.66) 0px 4px 8px;
+    }
+
+    &:first-child {
+      padding-left: 20px;
+      padding-right: 12px;
+      left: 70px;
+    }
+
+    &:nth-child(2) {
+      right: 70px;
+    }
+  }
+
+  .books-container {
+    width: 60%;
+    height: 85vh;
+    position: relative;
+    overflow: hidden;
+    border: 1px solid rgb(255, 234, 0);
+
+    .books {
+      height: 84%;
+      top: 60px;
+      left: 20px;
+      position: absolute;
+      display: grid;
+      grid-gap: 40px;
+      grid-template-columns: repeat(6, minmax(180px, 1fr));
+      justify-content: space-around;
+      border: 1px solid red;
+      transition: 0.8s;
+
+      .image {
+        width: 60%;
+        height: 100%;
+        overflow: hidden;
+        border: 1px solid rgb(38, 255, 0);
+        transition: all 0.6s;
+
+        &:hover {
+          transform: scale(1.2);
+        }
+  
+        img {
+          width: 100%;
+          height: 100%;
+        }
+      }
+    }
+  }
 
   a {
     position: absolute;
     bottom: 0;
     left: 50%;
     transform: translateX(-50%);
-    background: rgb(249, 162, 1);
+    background: #CB8346;
     color: #fff;
     text-decoration: none;
-    padding: 10px 30px;
-    font-size: 1.6rem;
+    padding: 10px 40px;
+    transition: 0.3s;
+
+    &:hover {
+      background: #df8d46;
+      box-shadow: rgba(201, 111, 1, 0.66) 0px 4px 8px;
+    }
+
+    h5 {
+      font-size: 1.6rem;
+      letter-spacing: 2px;
+    }
   }
 }
