--- a/src/pages/homepage/homepage.scss
+++ b/src/pages/homepage/homepage.scss
@@ -49,18 +49,20 @@
       left: 20px;
       position: absolute;
       display: grid;
-      grid-gap: 40px;
-      grid-template-columns: repeat(6, minmax(180px, 1fr));
+      grid-row-gap: 40px;
+      grid-column-gap: 120px;
+      grid-template-columns: repeat(6, minmax(100px, 1fr));
       justify-content: space-around;
       border: 1px solid red;
       transition: 0.8s;
 
       .image {
-        width: 60%;
+        width: 100%;
         height: 100%;
         overflow: hidden;
         border: 1px solid rgb(38, 255, 0);
         transition: all 0.6s;
+        cursor: pointer;
 
         &:hover {
           transform: scale(1.2);
@@ -91,8 +93,9 @@
     }
 
     h5 {
-      font-size: 1.6rem;
+      font-size: 1.2rem;
       letter-spacing: 2px;
+      text-transform: uppercase;
     }
   }
 }
