--- a/src/pages/all-book/all-book.scss
+++ b/src/pages/all-book/all-book.scss
@@ -1,9 +1,11 @@
 .all-book {
+  padding: 30px 0;
+
   .margin-top {
     margin-top: 40px;
 
     .show-more {
-      margin: 40px 0;
+      margin-top: 40px;
       text-align: center;
 
       button {
