--- a/src/pages/all-book/all-book.scss
+++ b/src/pages/all-book/all-book.scss
@@ -56,6 +56,10 @@
   }
 
   .card-container {
+    .card-body {
+      box-shadow: rgba(14, 30, 37, 0.12) 0px 2px 4px 0px, rgba(14, 30, 37, 0.32) 0px 2px 16px 0px;
+    }
+
     &.delete {
       display: none;
     }
