--- a/src/pages/homepage/homepage.scss
+++ b/src/pages/homepage/homepage.scss
@@ -19,6 +19,7 @@
     transform: translateY(-40%);
     cursor: pointer;
     transition: 0.3s;
+    z-index: 99;
 
     &:hover {
       background: #df8d46;
@@ -41,7 +42,6 @@
     height: 85vh;
     position: relative;
     overflow: hidden;
-    border: 1px solid rgb(255, 234, 0);
 
     .books {
       height: 84%;
@@ -53,14 +53,12 @@
       grid-column-gap: 120px;
       grid-template-columns: repeat(6, minmax(100px, 1fr));
       justify-content: space-around;
-      border: 1px solid red;
       transition: 0.8s;
 
       .image {
         width: 100%;
         height: 100%;
         overflow: hidden;
-        border: 1px solid rgb(38, 255, 0);
         transition: all 0.6s;
         cursor: pointer;
 
@@ -96,6 +94,80 @@
       font-size: 1.2rem;
       letter-spacing: 2px;
       text-transform: uppercase;
+      white-space: nowrap;
+    }
+  }
+}
+
+@media (max-width: 1200px) {
+  .homepage {
+    & > svg {
+      &:first-child {
+        left: 30px;
+      }
+  
+      &:nth-child(2) {
+        right: 30px;
+      }
+    }
+  }
+}
+
+@media (max-width: 950px) {
+  .homepage {
+    & > svg {
+      &:first-child {
+        left: 10px;
+      }
+  
+      &:nth-child(2) {
+        right: 10px;
+      }
+    }
+  }
+}
+
+@media (max-width: 560px) {
+  .homepage {
+    a {
+      h5 {
+        font-size: 1rem;
+      }
+    }
+
+    .books-container {
+      .books {
+        padding: 0 20px 0 10px;
+        grid-column-gap: 50px;
+      }
+    }
+  }
+}
+
+
+@media (max-width: 480px) {
+  .homepage {
+    & > svg {
+      &:first-child {
+        left: 5px;
+      }
+  
+      &:nth-child(2) {
+        right: 5px;
+      }
+    }
+
+    a {
+      h5 {
+        font-size: 1rem;
+      }
+    }
+
+    .books-container {
+      .books {
+        padding: 0 20px 0 35px;
+        grid-column-gap: 180px;
+      }
     }
   }
 }
